--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 html document
 <html>
   <head>
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <meta charset="utf-8">
+    <title> Abecedário, play and learn new languages
+    </title>
   </head>
   <body>
+    <h1>É isso ai que tu ta vendo</h1>
   </body>
 </html>
