--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
     <title> Abecedário, play and learn new languages
     </title>
+    <!--CSS-->
+    <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
   </head>
   <body>
     <h1>É isso ai que tu ta vendo</h1>
