--- a/index.html
+++ b/index.html
@@ -33,14 +33,11 @@
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                 <li><a class="dropdown-item" href="#">Solo</a></li>
-                <li><a class="dropdown-item" href="#">Solo Timed</a></li>
                 <li><a class="dropdown-item" href="#">Duel</a></li>
-                <li><a class="dropdown-item" href="#">Duel Timed</a></li>
                 <li><a class="dropdown-item" href="#">Casual MultiPlayer</a></li>
-                <li><a class="dropdown-item" href="#">MultiPlayer Timed</a></li>
                 <li><a class="dropdown-item" href="#">Athenian</a></li>
-                <li><a class="dropdown-item" href="#">Spartan</a></li>
-                <li><a class="dropdown-item" href="#">Roman</a></li>
+                <!--<li><a class="dropdown-item" href="#">Spartan</a></li>
+                <li><a class="dropdown-item" href="#">Roman</a></li>-->
               </ul>
             </li>
             <li class="nav-item dropdown">
