--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title> Abecedário! Play while practice new languages
+    <title> Abecedário! Play while practice new languages.
     </title>
 
     <!--CSS-->
