nav update 9 français added

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                 <li><a class="dropdown-item" href="#">Espanol</a></li>
                 <li><a class="dropdown-item" href="#">English</a></li>
                 <li><a class="dropdown-item" href="#">Italiano</a></li>
+                <li><a class="dropdown-item" href="#">Français</a></li>
                 <li><a class="dropdown-item" href="#">Deutsche</a></li>
                 <li><a class="dropdown-item" href="#">Nihongo</a></li>
               </ul>
