--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
               <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
                 <li><a class="dropdown-item" href="#">Calm</a></li>
                 <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Timed</a></li>
+                <li><a class="dropdown-item" href="#">Adaptive</a></li>
               </ul>
             </li>
           </ul>
