--- a/index.html
+++ b/index.html
@@ -17,26 +17,26 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Play</a>
+        <a class="navbar-brand" href="#">Jogar</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDarkDropdown" aria-controls="navbarNavDarkDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="#">Start Session</a>
+              <a class="nav-link" href="#">Começar Sessão</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Game Mode
+                Modo de Jogo
               </a>
               <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
                 <li><a class="dropdown-item" href="#">Solo</a></li>
-                <li><a class="dropdown-item" href="#">Duel</a></li>
-                <li><a class="dropdown-item" href="#">Casual MultiPlayer</a></li>
-                <li><a class="dropdown-item" href="#">Athenian</a></li>
-                <!--<li><a class="dropdown-item" href="#">Spartan</a></li>
-                <li><a class="dropdown-item" href="#">Roman</a></li>-->
+                <li><a class="dropdown-item" href="#">Duelo</a></li>
+                <li><a class="dropdown-item" href="#">MultiJogador</a></li>
+                <li><a class="dropdown-item" href="#">Atenience</a></li>
+                <!--<li><a class="dropdown-item" href="#">Espartano</a></li>
+                <li><a class="dropdown-item" href="#">Romano</a></li>-->
               </ul>
             </li>
             <li class="nav-item dropdown">
@@ -55,27 +55,48 @@
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Theme
+                Tema
               </a>
               <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
-                <li><a class="dropdown-item" href="#">Light</a></li>
-                <li><a class="dropdown-item" href="#">Dark</a></li>
+                <li><a class="dropdown-item" href="#">Claro</a></li>
+                <li><a class="dropdown-item" href="#">Escuro</a></li>
               </ul>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Music
+                Musica
               </a>
               <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
-                <li><a class="dropdown-item" href="#">Calm</a></li>
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Adaptive</a></li>
+                <li><a class="dropdown-item" href="#">Calma</a></li>
+                <li><a class="dropdown-item" href="#">Agitada</a></li>
+                <li><a class="dropdown-item" href="#">Adaptativa</a></li>
               </ul>
             </li>
           </ul>
         </div>
       </div>
     </nav>
+    <header>
+      <h1>Abecedário!</h1><h2>Jogue enquanto pratica uma nova língua.</h2>
+      <h3>Regras</h3>
+      <br/><p>Após sortiar uma letra do alfabeto os jogadores deverão colocar uma paçavra de cada categoria escolhida que comece com a letra sortiada no local indicado. Após um tempo, ou uma quantidade de participantes encerrar o turno, é feito a contagem de pontos. Cada categoria certa vale um ponto. O participante com mais pontos vence o turno, e o participante com mais turnos ganhos vence o jogo.</p>
+      <br/><h3>Modalidades</h3>
+      <br/>
+      <ul>
+        <li>
+          <h4>Normal</h4>
+          <br/><p>Nenhuma, ou uma quantidade de tempo longa para que cada turno possa ser concluido sem pressa.</p>
+        </li>
+        <li>
+          <h4>Cronometrada</h4>
+          <br/><p>É determinada uma quantidade de jogadores e de tempo para encerrar o turno. Ex.: 3 jogadores ou 3 minutos (nesse modo se 3 jogadores encerrarem seu turno ou se 3 minutos passarem o turnu acaba).</p>
+        </li>
+        <li>
+          <h4>Atenience, Espartana ou Romana</h4>
+          <br/><p>É determinado um tempo para terminar a partida como um todo (sem divisões em rodadas), assim a partida acaba quando o tempo ou as letras possíveis do alfabeto acabarem.</p>
+        </li>
+      </ul>
+    </header>
 
 
           <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
