--- a/index.html
+++ b/index.html
@@ -78,22 +78,23 @@
     </nav>
     <header>
       <h1>Abecedário!</h1><h2>Jogue enquanto pratica uma nova língua.</h2>
-      <h3>Regras</h3>
+      <br/><br/>
+      <h3>Regras:</h3>
       <br/><p>Após sortiar uma letra do alfabeto os jogadores deverão colocar uma paçavra de cada categoria escolhida que comece com a letra sortiada no local indicado. Após um tempo, ou uma quantidade de participantes encerrar o turno, é feito a contagem de pontos. Cada categoria certa vale um ponto. O participante com mais pontos vence o turno, e o participante com mais turnos ganhos vence o jogo.</p>
-      <br/><h3>Modalidades</h3>
+      <br/><h3>Modalidades:</h3>
       <br/>
       <ul>
         <li>
           <h4>Normal</h4>
-          <br/><p>Nenhuma, ou uma quantidade de tempo longa para que cada turno possa ser concluido sem pressa.</p>
+          <p>Nenhuma, ou uma quantidade de tempo longa para que cada turno possa ser concluido sem pressa.</p>
         </li>
         <li>
           <h4>Cronometrada</h4>
-          <br/><p>É determinada uma quantidade de jogadores e de tempo para encerrar o turno. Ex.: 3 jogadores ou 3 minutos (nesse modo se 3 jogadores encerrarem seu turno ou se 3 minutos passarem o turnu acaba).</p>
+          <p>É determinada uma quantidade de jogadores e de tempo para encerrar o turno. Ex.: 3 jogadores ou 3 minutos (nesse modo se 3 jogadores encerrarem seu turno ou se 3 minutos passarem o turnu acaba).</p>
         </li>
         <li>
           <h4>Atenience, Espartana ou Romana</h4>
-          <br/><p>É determinado um tempo para terminar a partida como um todo (sem divisões em rodadas), assim a partida acaba quando o tempo ou as letras possíveis do alfabeto acabarem.</p>
+          <p>É determinado um tempo para terminar a partida como um todo (sem divisões em rodadas), assim a partida acaba quando o tempo ou as letras possíveis do alfabeto acabarem.</p>
         </li>
       </ul>
     </header>
