nav update 12 musica

--- a/index.html
+++ b/index.html
@@ -64,12 +64,13 @@
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Musica
+                Música
               </a>
               <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
                 <li><a class="dropdown-item" href="#">Calma</a></li>
                 <li><a class="dropdown-item" href="#">Agitada</a></li>
                 <li><a class="dropdown-item" href="#">Adaptativa</a></li>
+                <li><a class="dropdown-item" href="#">Sem Música</a></li>
               </ul>
             </li>
           </ul>
