--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 
   </head>
-  <body>
+  <body class="theme">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">Começar Sessão</a>
@@ -77,25 +77,25 @@
         </div>
       </div>
     </nav>
-    <header>
-      <h1>Abecedário!</h1><h2>Jogue enquanto pratica uma nova língua.</h2>
+    <header class="header">
+      <h1 class="h">Abecedário!</h1><h2 class="h">Jogue enquanto pratica uma nova língua.</h2>
       <br/><br/>
-      <h3>Regras:</h3>
-      <br/><p>Após sortiar uma letra do alfabeto os jogadores deverão colocar uma paçavra de cada categoria escolhida que comece com a letra sortiada no local indicado. Após um tempo, ou uma quantidade de participantes encerrar o turno, é feito a contagem de pontos. Cada categoria certa vale um ponto. O participante com mais pontos vence o turno, e o participante com mais turnos ganhos vence o jogo.</p>
-      <br/><h3>Modalidades:</h3>
+      <h3 class="h">Regras:</h3>
+      <br/><p class="p">Após sortiar uma letra do alfabeto os jogadores deverão colocar uma paçavra de cada categoria escolhida que comece com a letra sortiada no local indicado. Após um tempo, ou uma quantidade de participantes encerrar o turno, é feito a contagem de pontos. Cada categoria certa vale um ponto. O participante com mais pontos vence o turno, e o participante com mais turnos ganhos vence o jogo.</p>
+      <br/><h3 class="h">Modalidades:</h3>
       <br/>
       <ul>
         <li>
-          <h4>Normal</h4>
-          <p>Nenhuma, ou uma quantidade de tempo longa para que cada turno possa ser concluido sem pressa.</p>
+          <h4 class="h">Normal</h4>
+          <p class="p">Nenhuma, ou uma quantidade de tempo longa para que cada turno possa ser concluido sem pressa.</p>
         </li>
         <li>
-          <h4>Cronometrada</h4>
-          <p>É determinada uma quantidade de jogadores e de tempo para encerrar o turno. Ex.: 3 jogadores ou 3 minutos (nesse modo se 3 jogadores encerrarem seu turno ou se 3 minutos passarem o turnu acaba).</p>
+          <h4 class="h">Cronometrada</h4>
+          <p class="p">É determinada uma quantidade de jogadores e de tempo para encerrar o turno. Ex.: 3 jogadores ou 3 minutos (nesse modo se 3 jogadores encerrarem seu turno ou se 3 minutos passarem o turnu acaba).</p>
         </li>
         <li>
-          <h4>Atenience, Espartana ou Romana</h4>
-          <p>É determinado um tempo para terminar a partida como um todo (sem divisões em rodadas), assim a partida acaba quando o tempo ou as letras possíveis do alfabeto acabarem.</p>
+          <h4 class="h">Atenience, Espartana ou Romana</h4>
+          <p class="p">É determinado um tempo para terminar a partida como um todo (sem divisões em rodadas), assim a partida acaba quando o tempo ou as letras possíveis do alfabeto acabarem.</p>
         </li>
       </ul>
     </header>
