--- a/index.html
+++ b/index.html
@@ -81,21 +81,21 @@
       <h1 class="h">Abecedário!</h1><h2 class="h">Jogue enquanto pratica uma nova língua.</h2>
       <br/><br/>
       <h3 class="h">Regras:</h3>
-      <br/><p class="p">Após sortiar uma letra do alfabeto os jogadores deverão colocar uma paçavra de cada categoria escolhida que comece com a letra sortiada no local indicado. Após um tempo, ou uma quantidade de participantes encerrar o turno, é feito a contagem de pontos. Cada categoria certa vale um ponto. O participante com mais pontos vence o turno, e o participante com mais turnos ganhos vence o jogo.</p>
+      <br/><p class="p">Após sortear uma letra do alfabeto os jogadores deverão colocar uma palavra de cada categoria escolhida que comece com a letra sorteada no local indicado. Após um tempo, ou uma quantidade de participantes encerrar o turno, é feito a contagem de pontos. Cada categoria certa vale um ponto. O participante com mais pontos vence o turno, e o participante com mais turnos ganhos vence o jogo.</p>
       <br/><h3 class="h">Modalidades:</h3>
       <br/>
       <ul>
         <li>
           <h4 class="h">Normal</h4>
-          <p class="p">Nenhuma, ou uma quantidade de tempo longa para que cada turno possa ser concluido sem pressa.</p>
+          <p class="p">Nenhuma, ou uma quantidade de tempo longa para que cada turno possa ser concluído sem pressa.</p>
         </li>
         <li>
           <h4 class="h">Cronometrada</h4>
-          <p class="p">É determinada uma quantidade de jogadores e de tempo para encerrar o turno. Ex.: 3 jogadores ou 3 minutos (nesse modo se 3 jogadores encerrarem seu turno ou se 3 minutos passarem o turnu acaba).</p>
+          <p class="p">É determinada uma quantidade de jogadores e de tempo para encerrar o turno. O turno acaba ou quando o tempo esgotar ou quando o número de jogadores determinado encerrar o turno. Ex.: 3 jogadores ou 3 minutos (nesse modo se 3 jogadores encerrarem seu turno ou se 3 minutos passarem o turno acaba).</p>
         </li>
         <li>
           <h4 class="h">Atenience, Espartana ou Romana</h4>
-          <p class="p">É determinado um tempo para terminar a partida como um todo (sem divisões em rodadas), assim a partida acaba quando o tempo ou as letras possíveis do alfabeto acabarem.</p>
+          <p class="p">É determinado um tempo para terminar a partida como um todo (sem divisões em rodadas), assim a partida acaba quando o tempo ou as letras possíveis do alfabeto acabarem. Nesse modo o jogador pode passar para uma nova letra quando quiser, e quando as letras esgotarem o jogador poderá revisar as letras anteriores em qualquer ordem, desde que ainda tenha tempo.</p>
         </li>
       </ul>
     </header>
