modo de jogo especialista

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <li><a class="dropdown-item" href="#">Solo</a></li>
                 <li><a class="dropdown-item" href="#">Duelo</a></li>
                 <li><a class="dropdown-item" href="#">MultiJogador</a></li>
-                <li><a class="dropdown-item" href="#">Atenience</a></li>
+                <li><a class="dropdown-item" href="#">Especialista</a></li>
                 <!--<li><a class="dropdown-item" href="#">Espartano</a></li>
                 <li><a class="dropdown-item" href="#">Romano</a></li>-->
               </ul>
@@ -94,8 +94,21 @@
           <p class="p">É determinada uma quantidade de jogadores e de tempo para encerrar o turno. O turno acaba ou quando o tempo esgotar ou quando o número de jogadores determinado encerrar o turno. Ex.: 3 jogadores ou 3 minutos (nesse modo se 3 jogadores encerrarem seu turno ou se 3 minutos passarem o turno acaba).</p>
         </li>
         <li>
-          <h4 class="h">Atenience, Espartana ou Romana</h4>
-          <p class="p">É determinado um tempo para terminar a partida como um todo (sem divisões em rodadas), assim a partida acaba quando o tempo ou as letras possíveis do alfabeto acabarem. Nesse modo o jogador pode passar para uma nova letra quando quiser, e quando as letras esgotarem o jogador poderá revisar as letras anteriores em qualquer ordem, desde que ainda tenha tempo.</p>
+          <h4 class="h">Especialista</h4>
+          <p class="p">É determinado um tempo para terminar a partida como um todo (sem divisões em rodadas), assim a partida acaba quando o tempo ou as letras possíveis do alfabeto acabarem. Nesse modo o jogador pode passar para uma nova letra quando quiser, e quando as letras esgotarem o jogador poderá revisar as letras anteriores em qualquer ordem, desde que ainda tenha tempo. Nesse modo é permitido a escolha da letra inicial.</p>
+          <br/>
+          <h4 class="h" >Exemplo de jogos:</h4>
+          <ul>
+            <li> <h6 class="h">Atenience.</h6>
+              <p class="p">É o modo único jogador especialista. Após o jogador escolher uma das opções de tempo ele escolhe entre ordem alfabética ou ordem randômica. Nesse modo o jogador poderá escolher a letra inicial.</p>
+            </li>
+            <li> <h6 class="h">Espartana.</h6>
+              <p class="p">É o modo duelo de especialistas. Após os jogadores escolherem uma das opções de tempo eles escolhem entre ordem alfabética ou ordem randômica. Nesse modo o jogador que ganhar em uma disputa de pedra, papel ou tesoura ou par ou ímpar poderá escolher a letra inicial.</p>
+            </li>
+            <li> <h6 class="h">Romana.</h6>
+              <p class="p">É o modo multijogador especialistas. Após os jogadores escolherem uma das opções de tempo eles escolhem entre ordem alfabética ou ordem randômica. Nesse modo o jogador mais novo poderá escolher a letra inicial.</p>
+            </li>
+          </ul>
         </li>
       </ul>
     </header>
