--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           <h4 class="h">Especialista</h4>
           <p class="p">É determinado um tempo para terminar a partida como um todo (sem divisões em rodadas), assim a partida acaba quando o tempo ou as letras possíveis do alfabeto acabarem. Nesse modo o jogador pode passar para uma nova letra quando quiser, e quando as letras esgotarem o jogador poderá revisar as letras anteriores em qualquer ordem, desde que ainda tenha tempo. Nesse modo é permitido a escolha da letra inicial.</p>
           <br/>
-          <h5 class="h" >Exemplo de jogos:</h5>
+          <h5 class="h h5Esp" >Exemplo de jogos:</h5>
           <ul>
             <li> <h6 class="h">Atenience.</h6>
               <p class="p">É o modo único jogador especialista. Após o jogador escolher uma das opções de tempo ele escolhe entre ordem alfabética ou ordem randômica. Nesse modo o jogador poderá escolher a letra inicial.</p>
